# WonderMake

./: .gitignore  BasicallyEverything.ruleset  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  WonderMake.sln  conanfile.txt  imgui.ini
Game/: CMakeLists.txt  Game.cpp  Game.h  Game.vcxproj  Game.vcxproj.filters  GameWorld.cpp  GameWorld.h  pch.h
Game/Actions/: Action.cpp  Action.h  ActionFunctionality.cpp  ActionFunctionality.h
Game/Camera/: CameraFunctionality.cpp  CameraFunctionality.h
Game/Character/: CharacterFunctionality.cpp  CharacterFunctionality.h
Game/Designers/: DesignerPhilosophy.md
Game/Effects/: GetHurtEffect.cpp  GetHurtEffect.h
Game/Enemy/: EnemyControllerComponent.h  EnemyControllerFunctionality.cpp  EnemyControllerFunctionality.h  TargetFunctionality.cpp  TargetFunctionality.h
Game/Generation/: BaseGenerator.cpp  BaseGenerator.h  GeneratedObject.h
Game/HitShapes/: HitShapeFunctionality.cpp  HitShapeFunctionality.h  HitShapeRenderObject.cpp  HitShapeRenderObject.h  HitShapeSpawnerFunctionality.cpp  HitShapeSpawnerFunctionality.h  Hitshapes.md
Game/Levels/: BuffGiverFunctionality.cpp  Level.h  LevelDenizenFunctionality.cpp  LevelDenizenFunctionality.h  LevelFunctionality.cpp  LevelFunctionality.h  LevelPortalFunctionality.cpp  LevelPortalFunctionality.h
Game/Movement/: DefaultMovementFunctionality.cpp  DefaultMovementFunctionality.h  MovementInputFunctionality.cpp  MovementInputFunctionality.h  SpinnerFunctionality.cpp  SpinnerFunctionality.h
Game/Movesets/: Moveset.h  MovesetFunctionality.cpp  MovesetFunctionality.h
Game/Physics/: StaticGeometryFunctionality.cpp  StaticGeometryFunctionality.h
Game/Player/: PlayerControllerFunctionality.cpp  PlayerControllerFunctionality.h
Game/Rendering/: VisionRenderObject.cpp
Game/Utility/: Constants.h  Palette.h
Game/UtilityFunctionalities/: FactionFunctionality.cpp  FactionFunctionality.h  LineOfSightFunctionality.cpp  LineOfSightFunctionality.h  TimeToLiveFunctionality.cpp  TimeToLiveFunctionality.h
Game/Weapons/: MeleeWeapon.cpp  MeleeWeapon.h  MeleeWeaponFunctionality.cpp  MeleeWeaponFunctionality.h  MeleeWeaponUserFunctionality.cpp  MeleeWeaponUserFunctionality.h  RangedWeapon.cpp  RangedWeapon.h  RangedWeaponFunctionality.cpp  RangedWeaponFunctionality.h  RangedWeaponUserFunctionality.cpp  RangedWeaponUserFunctionality.h  WeaponSwing.cpp  WeaponSwing.h  WeaponSwingAction.cpp  WeaponSwingAction.h  WeaponSwingHitShapeAction.cpp  WeaponSwingHitShapeAction.h
Game/WorldObjects/: BuffGiverFunctionality.h
Imgui/: CMakeLists.txt  Imgui.vcxproj  Imgui.vcxproj.filters  stdafx.h
Imgui/Imgui/: Imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_vulkan.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
Imgui/Source/: imgui_impl_glfw.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
WonderMake/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  CameraManager.cpp  CameraManager.h  Common.ifc  Constants.h  FileWatcher.cpp  FileWatcher.h  LineListRenderObject.cpp  LineListRenderObject.h  OpenGLFacade.h  Randomizer.h  RenderSettingsManager.cpp  RenderSettingsManager.h  TimeKeeper.cpp  TimeKeeper.h  Typedefs.h  WonderMake.vcxproj  WonderMake.vcxproj.filters  glad.c  imgui.ini  main.cpp  pch.h  stdafx.h
WonderMake/Assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  AssetRef.cpp  AssetRef.h
WonderMake/Audio/: AudioFile.cpp  AudioFile.h  AudioManager.cpp  AudioManager.h  AudioMixingNodeGraph.cpp  AudioMixingNodeGraph.h  AudioNodeTypes.cpp  AudioNodeTypes.h  SoundEffectNodeGraph.cpp  SoundEffectNodeGraph.h
WonderMake/Camera/: Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  Display.cpp  Display.h
WonderMake/Cheats/: CheatManager.cpp  CheatManager.h
WonderMake/Collision/: ColliderDebug.cpp  ColliderDebug.h  Colliders.h  CollisionComponent.h  CollisionFunctionality.cpp  CollisionFunctionality.h  CollisionSystem.cpp  CollisionSystem.h
WonderMake/CommonExtensions/: AttachedFunctionality.cpp  AttachedFunctionality.h  SpinnerFunctionality.cpp  SpinnerFunctionality.h  TimeToLiveFunctionality.cpp  TimeToLiveFunctionality.h
WonderMake/Components/: Component.cpp  Component.h  ComponentSystem.h  SpriteComponent.h  TransformComponent.h
WonderMake/Debugging/: CommandPalette.cpp  CommandPalette.h  DebugLine.cpp  DebugLine.h  DebugLineDrawer.cpp  DebugLineDrawer.h  DebugLineRenderObject.cpp  DebugLineRenderObject.h  (+2 more)
WonderMakeBase/: CMakeLists.txt  WonderMakeBase.vcxproj  WonderMakeBase.vcxproj.filters
WonderMakeEngine/: CMakeLists.txt  WonderMakeEngine.vcxproj  WonderMakeEngine.vcxproj.filters
WonderMakeIo/: CMakeLists.txt  WonderMakeIo.vcxproj  WonderMakeIo.vcxproj.filters
WonderMakeIoManualTests/: CMakeLists.txt  WinIpcConnectionManualTests.cpp  WonderMakeIoManualTests.vcxproj  WonderMakeIoManualTests.vcxproj.filters
WonderMakeIoTests/: CMakeLists.txt  SocketDecoratorTests.cpp  SocketMock.h  SocketSerializingImplTests.cpp  SocketSerializingMock.h  WinFileSystemTests.cpp  WinIpcConnectionTests.cpp  WonderMakeIoTests.vcxproj  WonderMakeIoTests.vcxproj.filters
WonderMakeLauncher/: CMakeLists.txt  Main.cpp  WonderMakeLauncher.vcxproj  WonderMakeLauncher.vcxproj.filters  pch.h  registryConfig.json
WonderMakeTests/: CMakeLists.txt  ContainerTests.cpp  DependencyTests.cpp  GuidTests.cpp  Main.cpp  ObjectTests.cpp  ParseJsonJobTests.cpp  PolicyTests.cpp  RotationTests.cpp  SystemContainerTests.cpp  SystemRegistryTests.cpp  VectorTests.cpp  WonderMakeTests.vcxproj  WonderMakeTests.vcxproj.filters
WonderMakeUtilityTests/: AliasTests.cpp  BindableTests.cpp  CMakeLists.txt  DependencyInjectionTests.cpp  MemoryUnitTests.cpp  WonderMakeUtilityTests.vcxproj  WonderMakeUtilityTests.vcxproj.filters
test/: CMakeLists.txt
wondermake-base-tests/: CMakeLists.txt
wondermake-engine/: CMakeLists.txt
wondermake-io/: CMakeLists.txt
wondermake-io-tests/: CMakeLists.txt
wondermake-io-tests-manual/: CMakeLists.txt
wondermake-utility/: CMakeLists.txt
wondermake-utility-tests/: CMakeLists.txt
(+1355 files in other folders)
